fix: 毎回起動するたびにルートで実行するワーニングが面倒なので抑制

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,6 +22,6 @@
       ]
     }
   },
-  "postCreateCommand": "pip install -r requirements.txt",
+  "postCreateCommand": "pip install --root-user-action=ignore -r requirements.txt",
   "remoteUser": "root"
 }
