Remove obsolete reference files and tests for basic concepts
- Deleted conditionals_and_loops.py, exceptions.py, functions.py, manual_test_example.py, variables_and_constants.py, and various pattern implementations (decorator, factory, observer, observer_property, strategy, template_method).
- Removed corresponding test files for the above modules, including tests for basic functionality, exceptions, functions, and patterns.
- Cleaned up the tests directory by removing all test files related to the deleted modules.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,36 @@
-# Byte-compiled / optimized / DLL files
+# --- python ---
 __pycache__/
 *.py[cod]
 
-# Virtual environment
+# --- virtual env ---
 .env/
 venv/
+.venv/
 
-# Test output
+# --- secrets ---
+.env
+.env.*
+
+# --- test ---
 .tox/
 .pytest_cache/
+htmlcov/
+coverage.xml
 
-# IDE / Editor settings
+# --- tooling cache ---
+.mypy_cache/
+.ruff_cache/
+.pyre/
+
+# --- build artifacts ---
+build/
+dist/
+*.egg-info/
+
+# --- docker ---
+docker-compose.override.yml
+
+# --- OS / editor ---
+.DS_Store
+.vscode/
 .idea/
